--- a/templates/bbs_detail.html
+++ b/templates/bbs_detail.html
@@ -5,28 +5,29 @@
 
 <div class = "contents">
 	<h3>{{bbs_obj.title}} </h3>
+	<hr>
+	<h5>{{bbs_obj.summary}} </h5>
+	<hr>
 
-	<br>
 	{{bbs_obj.content|safe}}
 </div>
 
 <hr>
 <div class='comments'>
-	<div>
-		{% get_comment_count for bbs_obj as comment_count %}
-		<span class="glyphicon glyphicon-comment">
-		</span>
-			{{comment_count}}
-	</div>
-	<br>
-
-
 
 	{% if user.is_authenticated %}
+		<div>
+			{% get_comment_count for bbs_obj as comment_count %}
+			字数 {{comment_count}}
+		</div>
+		</br>
+
 	    <form action="/sub_comment/" method="POST">
 	    	<!-- {% csrf_token %} -->
 	 		<textarea cols=80 rows=3 name='comment_content'></textarea>
 	    	<input type="hidden" name="bbs_id" value="{{bbs_obj.id}}" />
+	    	</br>
+	    	</br>
 	    	<input type="submit" value="Add comment" id="id_submit" />
 	    </form>
 	{%else%}
