--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <!-- <link rel="icon" href="http://v3.bootcss.com/favicon.ico"> -->
 
-    <title>Page Based on Navbar Example for Bootstrap</title>
+    <title>友答Django学习模板</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/statics/css/bootstrap.min.css" rel="stylesheet">
@@ -33,39 +33,69 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">主页</a>
+          <a class="navbar-brand" href="/">友答模板</a>
         </div>
 
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="#"><a href="/">全部</a></li>
+            
+            {% ifnotequal bbs_pub 1 %}
+              {% ifequal category_id 0 %}
+                <li class="active"><a href="/">全部</a></li>
+              {% else %}
+                <li class="#"><a href="/">全部</a></li>
+              {% endifequal %}  
+            
 
-            {% for category in bbs_category %}
-              <!-- {% print category.id category_id %} -->
-              {% ifequal category.id category_id %}
-                <li class="active"><a href="/category/{{category.id}}">{{category.name}}
-                </a></li>
-              {%else%}
-                <li class=""><a href="/category/{{category.id}}">{{category.name}}
-                </a></li>
-              {%endifequal%}
-            {% endfor %}
-
+              {% for category in bbs_category %}
+                <!-- {% print category.id category_id %} -->
+                {% ifequal category.id category_id %}
+                  <li class="active"><a href="/category/{{category.id}}">{{category.name}}
+                  </a></li>
+                {% else %}
+                  <li class="#"><a href="/category/{{category.id}}">{{category.name}}
+                  </a></li>
+                {% endifequal %}
+              {% endfor %}
+            {% endifnotequal %}
+            
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            {% ifnotequal bbs_pub 1 %}
+              {% if user.is_authenticated %}
+                <li class=""><a href="/bbs_pub/">发帖</a></li>
+              {% endif %}
+            {% endifnotequal %}
+
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" 
-              data-toggle="dropdown" id="" aria-expanded="false">
-                {% if user.is_authenticated %}
+<!--               <a href="#" class="dropdown-toggle" 
+              data-toggle="dropdown" id="" aria-expanded="false"> -->
+            {% ifnotequal bbs_pub 1 %}
+              {% if user.is_authenticated %}
+                  <a href="#" class="dropdown-toggle" 
+                  data-toggle="dropdown" id="" aria-expanded="false">
                   {{user.username}}
-                {% else %}
-                  登陆
-                {% endif %}<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Login</a></li>
-                <li><a href="/logout/">Logout</a></li>
-              </ul>
+                  <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="/logout/">登出</a></li>
+                    <!-- <li><a href="#">测试</a></li> -->
+                  </ul>
             </li>
+                {% else %}
+                  <li><a href="/login/" id="" aria-expanded="false">登陆</a></li>
+                  <li><a href="/register/" id="" aria-expanded="false">注册</a></li>
+<!--                   <a href="#" class="dropdown-toggle" 
+                  data-toggle="dropdown" id="" aria-expanded="false">
+                  {{user.username}}
+                  <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="/login/">登陆</a></li>
+                    <li><a href="/register/">注册</a></li>
+                  </ul> -->
+            </li>
+              {% endif %}
+            {% endifnotequal %}
+
           </ul>
         </div><!--/.nav-collapse -->
       </div>
