--- a/templates/register.html
+++ b/templates/register.html
@@ -2,9 +2,9 @@
 
 {% block page-content %}
 <div>
-<form action='/acc_login/' method ='POST'>
+<form action='/acc_register/' method ='POST'>
 
-	<span>用户登陆</span>
+	<span>用户注册</span>
 	<hr>
 	Username
 	<input type='text' name='username' />
@@ -15,11 +15,12 @@
 	<input type='password' name='password' />
 	<hr>
 
-	<input type='submit' value='Login' />
+	<input type='submit' value='register' />
 	<hr>
 
-	<span style='color:red'>{{login_err}}</span>
-
 </form>
+
+<span style='color:red'>{{register_err}}</span>
+
 </div>
 {%endblock%}
